fix: issue for all the screens on mobile view using view height

--- a/packages/bot-web-ui/src/components/dashboard/dashboard-component/load-bot-preview/index.scss
+++ b/packages/bot-web-ui/src/components/dashboard/dashboard-component/load-bot-preview/index.scss
@@ -159,7 +159,7 @@
                 width: 100%;
                 height: calc(100% - 20rem);
                 @include mobile {
-                    height: 40rem;
+                    height: calc(100vh - 85%);
                 }
             }
         }
